--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,10 @@
 }
 
 .campaign-card{
-  margin: 40px;
+  margin: 40px 20px;
   padding: 40px;
   cursor: pointer;
+  width: 400px;
 }
 
 .left-menu{
