--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,20 @@
 .campaign-list-area{
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.campaign-list-group{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 20px;
+}
+
+.campaign-boxes-list{
+  display: flex;
+  align-items: flex-start;
 }
 
 .toolbar-separator-campaign-detail{
