--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -13,3 +13,9 @@
   text-decoration: none;
   color: white;
 }
+
+.data-card-area {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+}
