--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -19,3 +19,8 @@
   justify-content: space-around;
   margin-top: 40px;
 }
+
+.data-graph-area {
+  display: flex;
+  justify-content: space-around;
+}
