--- a/src/components/campaigns/campaigns.css
+++ b/src/components/campaigns/campaigns.css
@@ -18,14 +18,14 @@
   margin: 0 20px;
 }
 
-.campaign-card{
+.campaign-card {
   margin: 40px 20px;
   padding: 40px;
   cursor: pointer;
   width: 300px;
 }
 
-.campaign-boxes-list{
+.campaign-boxes-list {
   display: flex;
 }
 
@@ -47,4 +47,10 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 850px) {
+  .campaign-card {
+    width: 250px;
+  }
 }
