--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -28,5 +28,37 @@
 .data-graph-area {
   display: flex;
   justify-content: space-around;
-  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.line-chart {
+  width: 600px;
+  height: 200px;
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width: 850px) {
+  .side-menu {
+    float: none;
+    height: auto;
+    width: 100%;
+  }
+
+  .data-card-area {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+  }
+
+  .data-graph-area {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .line-chart {
+    width: 350px;
+    height: 200px;
+    box-sizing: border-box;
+  }
 }
